<resources>
    <string name="app_name">Hi Buddy</string>
    <string name="user_name">Enter your username</string>
    <string name="user_pwd">Your Password</string>
    <string name="btn_login">Enter</string>
    <string name="full_name">Enter your full name</string>
    <string name="email">Your email@email.com</string>
    <string name="contact">Contact number example: +6013456789</string>
    <string name="DOB">Your DOB eg: 27/8/2000</string>

</resources>