<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello there !" />

    <EditText
        android:id="@+id/User_name"
        android:layout_width="379dp"
        android:layout_height="41dp"
        android:ems="10"
        android:inputType="text"
        android:text="Username: "
        android:hint="@string/user_name"/>

    <EditText
        android:id="@+id/user_pwd"
        android:layout_width="375dp"
        android:layout_height="43dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/user_pwd"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="370dp"
        android:layout_height="51dp"
        android:text="Login"
        android:hint="@string/btn_login"/>

</LinearLayout>